get data init data

--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,6 @@ upload/material/material1446374825.html
 upload/material/material1446375115.html
 upload/material/material1447678750.doc
 upload/material/material1449465910.log
-admin/log/log_2015-12-08.log
+admin/log/*.*
+lanshe
+admin/scripts/kindeditor/attached
